Crash on assert(batch->program_in_use == 0) #76393

Closed
opened 2020-05-04 10:30:23 +02:00 by Richard Antalik · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.1 26.20.15029.20013

Blender Version
Broken: version: 2.90 (sub 0), branch: arcpatch-D7595, commit date: 2020-05-04 04:45, hash: 8f6d462fbc
Worked: (newest version of Blender that worked as expected)

Short description of error
Crash on assert(batch->program_in_use == 0)

>	blender.exe!GPU_batch_program_set_no_use(GPUBatch * batch, unsigned int program, const GPUShaderInterface * shaderface) Line 379	C

 	blender.exe!GPU_batch_program_set(GPUBatch * batch, unsigned int program, const GPUShaderInterface * shaderface) Line 389	C
 	blender.exe!GPU_batch_program_set_builtin_with_config(GPUBatch * batch, eGPUBuiltinShader shader_id, eGPUShaderConfig sh_cfg) Line 1003	C
 	blender.exe!GPU_batch_program_set_builtin(GPUBatch * batch, eGPUBuiltinShader shader_id) Line 1008	C
 	blender.exe!button2d_draw_intern(const bContext * C, wmGizmo * gz, const bool select, const bool highlight) Line 211	C
 	blender.exe!gizmo_button2d_draw(const bContext * C, wmGizmo * gz) Line 278	C
 	blender.exe!gizmos_draw_list(const wmGizmoMap * gzmap, const bContext * C, ListBase * draw_gizmos) Line 489	C
 	blender.exe!WM_gizmomap_draw(wmGizmoMap * gzmap, const bContext * C, const eWM_GizmoFlagMapDrawStep drawstep) Line 513	C
 	blender.exe!DRW_draw_gizmo_3d() Line 211	C
 	blender.exe!DRW_draw_callbacks_post_scene() Line 1327	C
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1512	C
 	blender.exe!DRW_draw_view(const bContext * C) Line 1393	C
 	blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1609	C
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1634	C
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 539	C
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 690	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 816	C
 	blender.exe!wm_draw_update(bContext * C) Line 1022	C
 	blender.exe!WM_main(bContext * C) Line 457	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530	C

Exact steps for others to reproduce the error

  • Open general template
  • Go to edit mode
  • Face select mode
  • Select any face

Select Extrude tool

Crash

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.4.1 26.20.15029.20013 **Blender Version** Broken: version: 2.90 (sub 0), branch: arcpatch-[D7595](https://archive.blender.org/developer/D7595), commit date: 2020-05-04 04:45, hash: `8f6d462fbc` Worked: (newest version of Blender that worked as expected) **Short description of error** Crash on `assert(batch->program_in_use == 0)` ``` > blender.exe!GPU_batch_program_set_no_use(GPUBatch * batch, unsigned int program, const GPUShaderInterface * shaderface) Line 379 C blender.exe!GPU_batch_program_set(GPUBatch * batch, unsigned int program, const GPUShaderInterface * shaderface) Line 389 C blender.exe!GPU_batch_program_set_builtin_with_config(GPUBatch * batch, eGPUBuiltinShader shader_id, eGPUShaderConfig sh_cfg) Line 1003 C blender.exe!GPU_batch_program_set_builtin(GPUBatch * batch, eGPUBuiltinShader shader_id) Line 1008 C blender.exe!button2d_draw_intern(const bContext * C, wmGizmo * gz, const bool select, const bool highlight) Line 211 C blender.exe!gizmo_button2d_draw(const bContext * C, wmGizmo * gz) Line 278 C blender.exe!gizmos_draw_list(const wmGizmoMap * gzmap, const bContext * C, ListBase * draw_gizmos) Line 489 C blender.exe!WM_gizmomap_draw(wmGizmoMap * gzmap, const bContext * C, const eWM_GizmoFlagMapDrawStep drawstep) Line 513 C blender.exe!DRW_draw_gizmo_3d() Line 211 C blender.exe!DRW_draw_callbacks_post_scene() Line 1327 C blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1512 C blender.exe!DRW_draw_view(const bContext * C) Line 1393 C blender.exe!view3d_draw_view(const bContext * C, ARegion * region) Line 1609 C blender.exe!view3d_main_region_draw(const bContext * C, ARegion * region) Line 1634 C blender.exe!ED_region_do_draw(bContext * C, ARegion * region) Line 539 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 690 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 816 C blender.exe!wm_draw_update(bContext * C) Line 1022 C blender.exe!WM_main(bContext * C) Line 457 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530 C ``` **Exact steps for others to reproduce the error** - Open general template - Go to edit mode - Face select mode - Select any face # Select Extrude tool Crash
Author
Member

Added subscriber: @iss

Added subscriber: @iss

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Issue probably introduced in d712f1f8 since GPU_batch_draw(button->shape_batch- [x]) was commented.

Issue probably introduced in d712f1f8 since `GPU_batch_draw(button->shape_batch- [x])` was commented.

This issue was referenced by 4d5af14852

This issue was referenced by 4d5af14852250c79d113dd4bd4c93fefd984c232

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-05-07 23:33:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76393
No description provided.