Fix T76393 Gizmo: Crash on assert(batch->program_in_use == 0)

This also fix line width support for button2D shape batch